add width to question border

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,11 +1,11 @@
 .title {
-    font-family: serif;
+    font-family: fantasy;
     color: aqua;
 }
 
 
 body {
-    font-family: serif;
+    font-family: fantasy;
     background-color:dimgray;
     color: aqua;
 }
@@ -25,7 +25,7 @@ body {
     color:color(from aqua srgb 4 4 105);
     border:5px dotted silver;
     padding: 5%;
-    max-width: 70%;
+    max-width: 80%;
     margin-left: 50px;
 
 }
